exports[`BasicAuthField should match the previous snapshot when invalid 1`] = `
<div
  className="row">
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button">
    <h3>
      Basic auth
      <i
        className="fa fa-angle-right" />
    </h3>
  </button>
  <div
    aria-expanded={null}
    className="collapse col-xs-12">
    <div
      className="form-group has-error">
      BasicAuth
    </div>
  </div>
</div>
`;

exports[`BasicAuthField should match the previous snapshot when valid 1`] = `
<div
  className="row">
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button">
    <h3>
      Basic auth
      <i
        className="fa fa-angle-right" />
    </h3>
  </button>
  <div
    aria-expanded={null}
    className="collapse col-xs-12">
    <div
      className="form-group">
      BasicAuth
    </div>
  </div>
</div>
`;
